--- a/pages/css/pagelist.css
+++ b/pages/css/pagelist.css
@@ -22,7 +22,7 @@ header
 **/
 header {
 	/* style */
-	background: linear-gradient(90deg, rgba(235,0,106,1) 0%, rgba(0,169,255,1) 50%, rgba(167,148,0,1) 100%);
+	background: linear-gradient(90deg, rgba(255,13,129,1) 0%, rgba(201,0,255,1) 24%, rgba(242,0,227,1) 50%, rgba(0,162,255,1) 75%);
 	color: #fff;
 	text-align: center;
 	/* layout */
